[gd_scene load_steps=9 format=3 uid="uid://drfsdfhjtrmon"]

[ext_resource type="Script" path="res://scenes/foreststuff/FirTree.gd" id="1_0w85b"]
[ext_resource type="Texture2D" uid="uid://cnk4bxyxqc3xp" path="res://scenes/foreststuff/firtree.png" id="1_cr5kp"]
[ext_resource type="PackedScene" uid="uid://buodo2mxdmdfb" path="res://scenes/FoggyAnimatedSprite/FoggyAnimatedSprite.tscn" id="3_a7y7c"]
[ext_resource type="Shader" path="res://scenes/FoggyAnimatedSprite/billboard.gdshader" id="4_k08q6"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_ene7o"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5uftm"]
render_priority = 0
shader = ExtResource("4_k08q6")
shader_parameter/directions = 1
shader_parameter/frame_count = 1
shader_parameter/frame = 0
shader_parameter/scale = 0.5
shader_parameter/y_billboard = true
shader_parameter/use_alpha = true
shader_parameter/albedo = ExtResource("1_cr5kp")

[sub_resource type="ArrayMesh" id="ArrayMesh_3dyc6"]
_surfaces = [{
"aabb": AABB(-5.12, -5.12, 0, 10.24, 10.24, 1e-05),
"attribute_data": PackedByteArray(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 0, 0),
"format": 34359742481,
"index_count": 6,
"index_data": PackedByteArray(0, 0, 1, 0, 2, 0, 0, 0, 2, 0, 3, 0),
"material": SubResource("ShaderMaterial_5uftm"),
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 4,
"vertex_data": PackedByteArray(10, 215, 163, 192, 10, 215, 163, 64, 0, 0, 0, 0, 10, 215, 163, 192, 10, 215, 163, 192, 0, 0, 0, 0, 10, 215, 163, 64, 10, 215, 163, 192, 0, 0, 0, 0, 10, 215, 163, 64, 10, 215, 163, 64, 0, 0, 0, 0)
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_g78h0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_cr5kp")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="FirTree" type="Area3D"]
script = ExtResource("1_0w85b")

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 2.39588, 0)
cast_shadow = 0
billboard = 2
alpha_cut = 1
texture_filter = 0
texture = ExtResource("1_cr5kp")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.43572, 0)
shape = SubResource("CylinderShape3D_ene7o")

[node name="FoggyAnimatedSprite" parent="." instance=ExtResource("3_a7y7c")]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 2.49066, 0)
mesh = SubResource("ArrayMesh_3dyc6")
sprite_frames = SubResource("SpriteFrames_g78h0")
animation = "default"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
